# CrashTwinRecomp

./: .gitmodules  README.md  TESTING.md  register_reference.txt
EEAnalyze/: CMakeLists.txt  Function.cpp  Function.h  analyze.cpp  analyze.h  analyze_test.cpp  main.cpp  register_state.h
docs/: ps2_docs.txt  recomp_context.txt
docs/non-docs/: gemini_bootstrap_context.txt  updated_bootstrap.txt
host_app/: CMakeLists.txt  cpu_state.h  main.cpp  memory.cpp  memory.h  memory_test.cpp  minimal_host  recomp_test.cpp  recomp_test.h
recompiler_tool/: CMakeLists.txt  main.cpp  recompiler.cpp  recompiler.h  recompiler_output.current.cpp  recompiler_test.cpp  run_recompiler_test.sh  test.asm  test.elf
